# LibUsb

./: CMakeLists.txt  README.md  build__Linux__CMake.sh  build__Win__CMake.bat  env_probe.cmake  prepare_os_env.cmake
build_linux/: CMakeCache.txt  Makefile  UsbDevice_With_Library  cmake_install.cmake  devlist  hotplug_linux
lib/win32/: libusb-1.0.lib
lib/win64/: libusb-1.0.lib
src/: devlist.cpp  hotplug_linux.cpp  main.cpp
